// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField  a large TextField object should return a large TextField object  1`] = `
.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.4rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 8px;
  border-radius: 8px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1.2rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder {
  color: hsl(0,0%,75%);
}

<div
  className="c0"
>
  <input
    className="c1"
    id="exampleFullName"
    name="exampleFullName"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName"
  >
    Full name
  </label>
</div>
`;

exports[`TextField Component base should return a TextField object 1`] = `
.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.4rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder {
  color: hsl(0,0%,75%);
}

<div
  className="c0"
>
  <input
    className="c1"
    id="exampleFullName"
    name="exampleFullName"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName"
  >
    Full name
  </label>
</div>
`;

exports[`TextField a TextField object should return a TextField object with a red bg 1`] = `
.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.4rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: hsl(4.1,89.6%,58.4%);
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder {
  color: hsl(0,0%,75%);
}

<div
  className="c0"
>
  <input
    className="c1"
    id="exampleFullName2"
    name="exampleFullName2"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName2"
  >
    Full name2
  </label>
</div>
`;

exports[`TextField a plainText TextField should return a disabled TextField 1`] = `
.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.4rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 0;
  display: block;
  outline: 0;
  padding: 1rem;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<div
  className="c0"
>
  <input
    className="c1"
    id="exampleFullName2"
    name="exampleFullName2"
    readOnly={true}
    tabIndex="-1"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName2"
  >
    Full name2
  </label>
</div>
`;

exports[`TextField a small TextField object should return a disabled TextField 1`] = `
.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.4rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus {
  border-color: hsl(4.1,89.6%,58.4%);
  box-shadow: 0 0 0 1px hsl(4.1,89.6%,58.4%);
}

.c1:focus + label {
  color: hsl(4.1,89.6%,58.4%);
}

.c1::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder {
  color: hsl(0,0%,75%);
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={true}
    id="exampleFullName2"
    name="exampleFullName2"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName2"
  >
    Full name2
  </label>
</div>
`;

exports[`TextField a small TextField object should return a small TextField object  1`] = `
.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.4rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 2px;
  border-radius: 2px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder {
  color: hsl(0,0%,75%);
}

<div
  className="c0"
>
  <input
    className="c1"
    id="exampleFullName"
    name="exampleFullName"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName"
  >
    Full name
  </label>
</div>
`;

exports[`TextField a small TextField object should return a small TextField object with a red activeColor  1`] = `
.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.4rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus {
  border-color: hsl(4.1,89.6%,58.4%);
  box-shadow: 0 0 0 1px hsl(4.1,89.6%,58.4%);
}

.c1:focus + label {
  color: hsl(4.1,89.6%,58.4%);
}

.c1::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder {
  color: hsl(0,0%,75%);
}

<div
  className="c0"
>
  <input
    className="c1"
    id="exampleFullName2"
    name="exampleFullName2"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName2"
  >
    Full name2
  </label>
</div>
`;

exports[`TextField a small TextField object should return a small TextField object with space mb  1`] = `
.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.4rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder {
  color: hsl(0,0%,75%);
}

<div
  className="c0"
>
  <input
    className="c1"
    id="exampleFullName2"
    name="exampleFullName2"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName2"
  >
    Full name2
  </label>
</div>
`;

exports[`TextField with a currency attribute should return a TextField of input type currency 1`] = `
.c0 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder {
  color: hsl(0,0%,75%);
}

<TextInputComponent
  activeColor="brandPrimary"
  bg={null}
  borderColor="borderColor"
  borderRadius="4px"
  className="c0"
  currency={true}
  email={false}
  fontFamily="base"
  formStyle=""
  id="currency"
  isFocused={false}
  isRequired={false}
  labelText=""
  maxRows={4}
  multiline={false}
  name="currency"
  padding="1rem"
  password={false}
  placeholderColor="gray.light"
  plainText={false}
  validationError=""
>
  <Component
    autoComplete="no"
    className="c0"
    id="currency"
    name="currency"
    options={
      Object {
        "initValue": undefined,
        "numeral": true,
        "numeralThousandsGroupStyle": "thousand",
        "prefix": "$",
      }
    }
    readOnly={false}
    tabIndex="0"
  >
    <input
      autoComplete="no"
      className="c0"
      id="currency"
      name="currency"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      tabIndex="0"
      type="text"
      value="$"
    />
  </Component>
</TextInputComponent>
`;

exports[`TextField with a formatterOptions attribute should return a TextField with formatterOptions 1`] = `
.c0 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder {
  color: hsl(0,0%,75%);
}

<TextInputComponent
  activeColor="brandPrimary"
  bg={null}
  borderColor="borderColor"
  borderRadius="4px"
  className="c0"
  email={false}
  fontFamily="base"
  formStyle=""
  formatterOptions={
    Object {
      "initValue": undefined,
      "numeral": true,
      "numeralThousandsGroupStyle": "thousand",
    }
  }
  id="formatterOptions"
  isFocused={false}
  isRequired={false}
  labelText=""
  maxRows={4}
  multiline={false}
  name="formatterOptions"
  padding="1rem"
  password={false}
  placeholderColor="gray.light"
  plainText={false}
  validationError=""
>
  <Component
    autoComplete="no"
    className="c0"
    id="formatterOptions"
    name="formatterOptions"
    options={
      Object {
        "initValue": undefined,
        "numeral": true,
        "numeralThousandsGroupStyle": "thousand",
      }
    }
    readOnly={false}
    tabIndex="0"
  >
    <input
      autoComplete="no"
      className="c0"
      id="formatterOptions"
      name="formatterOptions"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      tabIndex="0"
      type="text"
      value=""
    />
  </Component>
</TextInputComponent>
`;

exports[`TextField with a multiline option should return a multiline TextField 1`] = `
.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  resize: none;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder {
  color: hsl(0,0%,75%);
}

<div
  className="c0"
>
  <div />
  <textarea
    className="c1"
    id="exampleDescription"
    name="exampleDescription"
    onChange={[Function]}
    readOnly={false}
    style={
      Object {
        "height": 0,
      }
    }
    tabIndex="0"
  />
</div>
`;

exports[`TextField with a numeric attribute should return a TextField of input type numeric 1`] = `
.c0 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder {
  color: hsl(0,0%,75%);
}

<TextInputComponent
  activeColor="brandPrimary"
  bg={null}
  borderColor="borderColor"
  borderRadius="4px"
  className="c0"
  email={false}
  fontFamily="base"
  formStyle=""
  id="numeric"
  isFocused={false}
  isRequired={false}
  labelText=""
  maxRows={4}
  multiline={false}
  name="numeric"
  numeric={true}
  padding="1rem"
  password={false}
  placeholderColor="gray.light"
  plainText={false}
  validationError=""
>
  <Component
    autoComplete="no"
    className="c0"
    id="numeric"
    name="numeric"
    options={
      Object {
        "initValue": undefined,
        "numeral": true,
        "numeralThousandsGroupStyle": "thousand",
      }
    }
    readOnly={false}
    tabIndex="0"
  >
    <input
      autoComplete="no"
      className="c0"
      id="numeric"
      name="numeric"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      tabIndex="0"
      type="text"
      value=""
    />
  </Component>
</TextInputComponent>
`;

exports[`TextField with a password attribute should return a TextField of input type password 1`] = `
.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder {
  color: hsl(0,0%,75%);
}

<div
  className="c0"
>
  <input
    className="c1"
    id="password"
    name="password"
    readOnly={false}
    tabIndex="0"
    type="password"
  />
</div>
`;

exports[`TextField with a phone attribute should return a TextField of input type phone 1`] = `
.c0 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder {
  color: hsl(0,0%,75%);
}

<TextInputComponent
  activeColor="brandPrimary"
  bg={null}
  borderColor="borderColor"
  borderRadius="4px"
  className="c0"
  email={false}
  fontFamily="base"
  formStyle=""
  id="phone"
  isFocused={false}
  isRequired={false}
  labelText=""
  maxRows={4}
  multiline={false}
  name="phone"
  padding="1rem"
  password={false}
  phone={true}
  placeholderColor="gray.light"
  plainText={false}
  validationError=""
>
  <Component
    autoComplete="no"
    className="c0"
    id="phone"
    name="phone"
    options={
      Object {
        "delimiter": "-",
        "initValue": undefined,
        "phone": true,
        "phoneRegionCode": "US",
      }
    }
    readOnly={false}
    tabIndex="0"
  >
    <input
      autoComplete="no"
      className="c0"
      id="phone"
      name="phone"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      tabIndex="0"
      type="text"
      value=""
    />
  </Component>
</TextInputComponent>
`;

exports[`TextField with a postalCode attribute should return a TextField of input type postalCode 1`] = `
.c0 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder {
  color: hsl(0,0%,75%);
}

<TextInputComponent
  activeColor="brandPrimary"
  bg={null}
  borderColor="borderColor"
  borderRadius="4px"
  className="c0"
  email={false}
  fontFamily="base"
  formStyle=""
  id="postalCode"
  isFocused={false}
  isRequired={false}
  labelText=""
  maxRows={4}
  multiline={false}
  name="postalCode"
  padding="1rem"
  password={false}
  placeholderColor="gray.light"
  plainText={false}
  postalCode={true}
  validationError=""
>
  <Component
    autoComplete="no"
    className="c0"
    id="postalCode"
    name="postalCode"
    options={
      Object {
        "blocks": Array [
          5,
          4,
        ],
        "delimiter": "-",
        "delimiterLazyShow": true,
        "initValue": undefined,
        "numericOnly": true,
      }
    }
    readOnly={false}
    tabIndex="0"
  >
    <input
      autoComplete="no"
      className="c0"
      id="postalCode"
      name="postalCode"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      tabIndex="0"
      type="text"
      value=""
    />
  </Component>
</TextInputComponent>
`;

exports[`TextField with an email attribute should return a TextField of input type email 1`] = `
.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder {
  color: hsl(0,0%,75%);
}

<div
  className="c0"
>
  <input
    className="c1"
    id="email"
    name="email"
    readOnly={false}
    tabIndex="0"
    type="email"
  />
</div>
`;

exports[`TextField with an id attribute provided should return a TextField with Label.htmlFor value based on controlId attribute 1`] = `
.c3 {
  background-color: transparent;
  color: hsl(0,0%,50%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-left: 16px;
  padding-right: 16px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.4rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder {
  color: hsl(0,0%,75%);
}

<div
  className="c0"
>
  <input
    className="c1"
    id="exampleFullNameCID"
    name="exampleFullName"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullNameCID"
  >
    Full name
  </label>
  <div
    className="c3"
    id="exampleFullNameCIDHelp"
  >
    Please tell me your name
  </div>
</div>
`;

exports[`TextField with an integer attribute should return a TextField of input type integer 1`] = `
.c0 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0[disabled] {
  opacity: 0.3;
}

.c0[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c0:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c0:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c0::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c0:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c0::placeholder {
  color: hsl(0,0%,75%);
}

<TextInputComponent
  activeColor="brandPrimary"
  bg={null}
  borderColor="borderColor"
  borderRadius="4px"
  className="c0"
  email={false}
  fontFamily="base"
  formStyle=""
  id="integer"
  integer={true}
  isFocused={false}
  isRequired={false}
  labelText=""
  maxRows={4}
  multiline={false}
  name="integer"
  padding="1rem"
  password={false}
  placeholderColor="gray.light"
  plainText={false}
  validationError=""
>
  <Component
    autoComplete="no"
    className="c0"
    id="integer"
    name="integer"
    options={
      Object {
        "initValue": undefined,
        "numeral": true,
        "numeralDecimalScale": 0,
        "numeralThousandsGroupStyle": "thousand",
      }
    }
    readOnly={false}
    tabIndex="0"
  >
    <input
      autoComplete="no"
      className="c0"
      id="integer"
      name="integer"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      tabIndex="0"
      type="text"
      value=""
    />
  </Component>
</TextInputComponent>
`;

exports[`TextField with assistive text should return a TextField object contain Assistive Text 1`] = `
.c3 {
  background-color: transparent;
  color: hsl(0,0%,50%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-left: 16px;
  padding-right: 16px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.4rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder {
  color: hsl(0,0%,75%);
}

<div
  className="c0"
>
  <input
    className="c1"
    id="exampleFullName"
    name="exampleFullName"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName"
  >
    Full name
  </label>
  <div
    className="c3"
    id="exampleFullNameHelp"
  >
    Please tell me your name
  </div>
</div>
`;

exports[`TextField with custom assistive text props should return a TextField with custom assistive text props 1`] = `
.c2 {
  background-color: transparent;
  color: hsl(0,0%,50%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-left: 0;
  padding-right: 0;
  padding-top: 16px;
  padding-bottom: 16px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder {
  color: hsl(0,0%,75%);
}

<div
  className="c0"
>
  <input
    className="c1"
    id="formatterOptions"
    name="formatterOptions"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <div
    className="c2"
    id="formatterOptionsHelp"
  >
    Example: 123 ABC
  </div>
</div>
`;

exports[`TextField with custom control group props should return a TextField with custom control group props 1`] = `
.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 8px;
  padding-top: 0;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder {
  color: hsl(0,0%,75%);
}

<div
  className="c0"
>
  <input
    className="c1"
    id="formatterOptions"
    name="formatterOptions"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
</div>
`;

exports[`TextField with custom control label props should return a TextField with custom control label props 1`] = `
.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.4rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 0;
  padding-right: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder {
  color: hsl(0,0%,75%);
}

<div
  className="c0"
>
  <input
    className="c1"
    id="formatterOptions"
    name="formatterOptions"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="formatterOptions"
  >
    Address
  </label>
</div>
`;

exports[`TextField with object in assistive text should return a TextField object contain Assistive Text 1`] = `
.c4 {
  background-color: transparent;
  color: hsl(186.8,100%,41.6%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover,
.c4:active {
  color: hsl(207,90%,54%);
  cursor: pointer;
}

.c3 {
  background-color: transparent;
  color: hsl(0,0%,50%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-left: 16px;
  padding-right: 16px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: inherit;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.4rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus {
  border-color: hsl(323.3,84.6%,28%);
  box-shadow: 0 0 0 1px hsl(323.3,84.6%,28%);
}

.c1:focus + label {
  color: hsl(323.3,84.6%,28%);
}

.c1::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder {
  color: hsl(0,0%,75%);
}

<div
  className="c0"
>
  <input
    className="c1"
    id="exampleFullName"
    name="exampleFullName"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName"
  >
    Full name
  </label>
  <div
    className="c3"
    id="exampleFullNameHelp"
  >
    <a
      className="c4"
      href="https://youtu.be/tbNlMtqrYS0"
      target="_blank"
    >
      Well you know I'm gonna be...
    </a>
  </div>
</div>
`;

exports[`TextField with some other props should return a TextField object contain input with those other props  1`] = `
.c3 {
  color: hsl(4.1,89.6%,58.4%);
  background-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-left: 16px;
  padding-right: 16px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: hsl(4.1,89.6%,58.4%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.4rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(4.1,89.6%,58.4%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus {
  border-color: hsl(4.1,89.6%,58.4%);
  box-shadow: 0 0 0 1px hsl(4.1,89.6%,58.4%);
}

.c1:focus + label {
  color: hsl(4.1,89.6%,58.4%);
}

.c1::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder {
  color: hsl(0,0%,75%);
}

<div
  className="c0"
>
  <input
    className="c1"
    id="exampleFullName"
    link="abc"
    name="exampleFullName"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName"
  >
    Full Name*
  </label>
  <div
    className="c3"
    id="exampleFullNameError"
  >
    This is a required field.
  </div>
</div>
`;

exports[`TextField with validation error should return a TextField object contain Assistive Text with error style 1`] = `
.c3 {
  color: hsl(4.1,89.6%,58.4%);
  background-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  padding-left: 16px;
  padding-right: 16px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c2 {
  background-color: hsl(0,0%,100%);
  color: hsl(4.1,89.6%,58.4%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  height: 0.4rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 0.8;
  left: 8px;
  position: absolute;
  top: -1px;
  padding-left: 8px;
  padding-right: 8px;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c0 {
  position: relative;
  background-color: hsl(0,0%,100%);
  color: inherit;
  padding-bottom: 16px;
  padding-top: 4px;
  width: 100%;
}

.c1 {
  background-color: transparent;
  color: inherit;
  border: 1px solid hsl(4.1,89.6%,58.4%);
  border-radius: 4px;
  border-radius: 4px;
  outline: 0;
  padding: 1rem;
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1[disabled] {
  opacity: 0.3;
}

.c1[disabled] ~ * {
  color: rgba(0,0,0,0.3);
}

.c1:focus {
  border-color: hsl(4.1,89.6%,58.4%);
  box-shadow: 0 0 0 1px hsl(4.1,89.6%,58.4%);
}

.c1:focus + label {
  color: hsl(4.1,89.6%,58.4%);
}

.c1::-webkit-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::-moz-placeholder {
  color: hsl(0,0%,75%);
}

.c1:-ms-input-placeholder {
  color: hsl(0,0%,75%);
}

.c1::placeholder {
  color: hsl(0,0%,75%);
}

<div
  className="c0"
>
  <input
    className="c1"
    id="exampleFullName"
    name="exampleFullName"
    readOnly={false}
    tabIndex="0"
    type="text"
  />
  <label
    className="c2"
    htmlFor="exampleFullName"
  >
    Full name
  </label>
  <div
    className="c3"
    id="exampleFullNameError"
  >
    This is a required field.
  </div>
</div>
`;
